<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Accordion</string>
  <string name="settings">Settings</string>

  <string name="buttons_normal">Buttons normal</string>
  <string name="buttons_reversed">Buttons reversed</string>

  <string name="no_gyro">No Gyroscope</string>

  <string name="copyright">Copyright \u00A9 2014 Bill Farmer</string>
  <string name="licence">Licence: GNU GPLv3</string>
  
  <string name="pref_instrument">Instrument</string>
  <string name="pref_instrument_summ">%s</string>

  <string name="pref_key">Key</string>
  <string name="pref_key_summ">%s</string>

  <string name="pref_reverse">Reverse</string>
  <string name="pref_reverse_summ">Reverse buttons</string>

  <string name="pref_layout">Layout</string>
  <string name="pref_layout_summ">%s</string>

  <string name="pref_fascia">Fascia</string>
  <string name="pref_fascia_summ">%s</string>

  <string name="pref_bellows">Bellows</string>
  <string name="pref_bellows_summ">%s</string>

  <string name="pref_about">About</string>
  <string name="pref_about_summ">Accordion version %s</string>

</resources>
