<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings">

  <PreferenceCategory
      android:key="pref_intrument_category"
      android:title="@string/pref_instrument">

    <ListPreference
	android:key="pref_instrument"
	android:icon="@drawable/ic_pref_instrument"
	android:title="@string/pref_instrument"
	android:summary="@string/pref_instrument_summ"
	android:entries="@array/pref_instrument_entries"
	android:entryValues="@array/pref_instrument_entry_values"
	android:dialogIcon="@drawable/ic_pref_instrument"
	android:defaultValue="@integer/def_instrument" />

    <ListPreference
	android:key="pref_key"
	android:icon="@drawable/ic_pref_key"
	android:title="@string/pref_key"
	android:summary="@string/pref_key_summ"
	android:entries="@array/pref_key_entries"
	android:entryValues="@array/pref_key_entry_values"
	android:dialogIcon="@drawable/ic_pref_key"
	android:defaultValue="@integer/def_key" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_layout_category"
      android:title="@string/pref_layout">

    <ListPreference
	android:key="pref_layout"
	android:icon="@drawable/ic_pref_layout"
	android:title="@string/pref_layout"
	android:summary="@string/pref_layout_summ"
	android:entries="@array/pref_layout_entries"
	android:entryValues="@array/pref_layout_entry_values"
	android:dialogIcon="@drawable/ic_pref_layout"
	android:defaultValue="@integer/def_layout" />

    <SwitchPreference
	android:key="pref_reverse"
	android:icon="@drawable/ic_pref_reverse"
	android:title="@string/pref_reverse"
	android:summary="@string/pref_reverse_summ"
	android:defaultValue="false" />

    <ListPreference
	android:key="pref_fascia"
	android:icon="@drawable/ic_pref_fascia"
	android:title="@string/pref_fascia"
	android:summary="@string/pref_fascia_summ"
	android:entries="@array/pref_fascia_entries"
	android:entryValues="@array/pref_fascia_entry_values"
	android:dialogIcon="@drawable/ic_pref_fascia"
	android:defaultValue="@integer/def_fascia" />

  </PreferenceCategory>

  <PreferenceCategory
      android:key="pref_about_category"
      android:title="@string/pref_about">

    <org.billthefarmer.accordion.AboutPreference
	android:key="pref_about"
	android:icon="@drawable/ic_about"
	android:dialogIcon="@drawable/ic_about"
	android:negativeButtonText=""
	android:title="@string/pref_about"
	android:summary="@string/pref_about_summ"
	android:dialogLayout="@layout/about_dialog" />

  </PreferenceCategory>

</PreferenceScreen>
